archivos del pia

--- a/PIA/src/app/perfil/perfil.component.html
+++ b/PIA/src/app/perfil/perfil.component.html
@@ -32,5 +32,5 @@
 </ion-content>
 
 <ion-content>
-  <ion-button routerLink="/login" class="siguiente">Siguiente</ion-button>
+  <ion-button routerLink="/homeinicio" class="siguiente">Siguiente</ion-button>
 </ion-content>
