--- a/PIA/src/app/home/home.page.html
+++ b/PIA/src/app/home/home.page.html
@@ -6,22 +6,17 @@
   </ion-toolbar>
 </ion-header>-->
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="general">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div id="container">
-    
-    <ion-card>
-      <ion-img id="imagen"
-      src="IMG_2756.png"
-      alt="The Wisconsin State Capitol building in Madison, WI at night"
-      ></ion-img>
-    </ion-card>
-  <br>
+  <ion-content>
+    <img src="assets/IMG_2756.png">
+  </ion-content>
+  
+  <div id="container" class="Contenedor"> 
     <strong>Millones de canciones en un <br>solo lugar</strong>
     <br>
     <br>
