--- a/PIA/src/app/inicio/inicio.component.html
+++ b/PIA/src/app/inicio/inicio.component.html
@@ -1,24 +1,37 @@
-<div class="general">
-  <ion-item class="item1" lines="none" color="negro">
-    <ion-icon routerLink="/home" class="icon" color="gris" name="arrow-back-circle-outline">  </ion-icon>
-     <ion-label class="ion-text-center">Crear una cuenta</ion-label>
-  </ion-item>
+<ion-content padding>
+
+  <!--formulario-->
+  <form [formGroup]="formRegister" (ngSubmit)="submitForm()" novalidate>
   
-  <ion-content [fullscreen]="true">
-    <!--<ion-header collapse="condense">
-      <ion-toolbar>
-        <ion-title size="large">Home</ion-title>
-      </ion-toolbar>
-    </ion-header>-->
-  <br>
-  <br>
-    <div  class="posicion">
-      <ion-label class="labelCorreo">¿Cual es tu correo?</ion-label>
-      <ion-textarea class="cajatexto" placeholder="Ingrese el correo"></ion-textarea>
-    </div>
+  <!--Esto es lo primero que es visible (pide correo)-->    
   
-    <ion-button routerLink="/login" class="siguiente">Siguiente</ion-button>
-  </ion-content>
-</div>
+    <ion-item>
+        <ion-input type="email" formControlName="email" class="custom" placeholder="¿Cual es tu correo?"></ion-input>
+        
+    </ion-item>
+    
+   
+    <ion-item>
+        <ion-input  type="password" formControlName="password" class="custom" placeholder="Elige tu contraseña"></ion-input>
+    
+    
+    </ion-item>
+    
+  
+      <ion-item>
+          <ion-input type="name" formControlName="name" class="custom" placeholder="¿Cual es tu nombre?"></ion-input>
+      </ion-item>
+
+   
+      
+      <ion-item-divider>
+          <ion-button size="larger"  type="submit" shape="round" color="success" routerLink="/prueba/{{name}}">Inicio</ion-button>
+           </ion-item-divider>
+
+
+   
+  
+</form>
+  </ion-content>
 
 
